refactor content publishing workflow